SubVersion: $Id$

- 25/06/2005, version 2.00:
	- [roms] $1545: replaced my hand-made about box by the generic one provided with GTK 2.6

- 23/06/2005, version 2.00-rc5:
	- [roms] $1525: merged Kevin's change in rev $1524 (recfile).
	- [roms] $1542: merged Kevin's UAE upgrade.
	- [roms] $1543: fixed 'Receive file' check item.
	- [roms] $1544: fixed bug #1227179 (screenshot).

- 10/06/2005, version 2.00-rc4:
	- [roms] $1488: replaced current icon by Jaime's one
	- [roms] $1489: removed logo from about box
	- [jb]   $1493: src/gui/calc.c: screenshot of the whole calc in BW
		is not supported, error out in this case. It'd be nice to pop an
		error message to the user.
	- [jb]   $1493: src/misc/screenshot.c: enable BW screenshot in EPS
		and PDF; they're treated like color screenshots.
	- [roms] $1497: added hibou's logo
	- [roms] $1507: cleanup and little fixes in interrupt support of m68k
	- [roms] $1509: fixed behaviour of all keys and definitely fixed ON key

- 01/06/2005, version 2.00-rc3:
	- [roms] $1462: fixed bug #1212619.
	- [roms] $1467: fixed ON key
	- [roms] $1470-76: 
		don't restart the whole GUI when switching view mode.
		The main wnd can be resized by dragging it and its content is automatically scaled.
	- [roms] $1478: popup menu and tiemu.ini updated to support custom scaling factor.
	- [roms] $1480: changed logo for Kevin's one.
	- [roms] $1483: fixed full-screen mode
	- [kevin] $1485/1486: replaced TiLP logo in the HTML manual with my temporary TiEmu logo
	- [roms] $1487: fixed resized window with key positions (mouse) (bug #1217627)
	
- 31/05/2005, version 2.00-rc2:
	- [kevin] $1357/1362: added support for disassembling ER_throw
	- [kevin] $1364/1365: link tiemu.rc in for MinGW
	- [roms]  $1382: fixed HOME & CATALOG keys on Titanium (mouse only)
	- [jb]    $1399: added EPS/PDF screenshot output
	- [roms]  $1408: fixed check of Titanium skins (bug #1209813)
	- [roms]  $1415: fixed debugger display under SawFish (patch #1209183)