@@ -253,23 +253,11 @@ GLADE_CB void
 on_calc_wnd_destroy                    (GtkObject       *object,
                                         gpointer         user_data)
 {
-#ifdef __IPAQ__
-    on_exit_without_saving_state1_activate(NULL, NULL);
-#else
-	return;
-#endif
-}
+	// When GTK called this signal, the widget has already been destroy
+	// thus set the pointer to a valid value, ie NULL .
+	main_wnd = NULL;
 
-GLADE_CB gboolean
-on_calc_wnd_delete_event           (GtkWidget       *widget,
-                                        GdkEvent        *event,
-                                        gpointer         user_data)
-{
-#ifdef __IPAQ__
-    return FALSE;
-#else
-    return TRUE;	// block destroy
-#endif
+	on_exit_without_saving_state1_activate(NULL, NULL);
 }
 
 extern void redraw_skin(void);
@@ -624,7 +612,8 @@ int  hid_exit(void)
     }
 
     // Destroy window
-    gtk_widget_destroy(main_wnd);
+	if(main_wnd)
+		gtk_widget_destroy(main_wnd);
 
     return 0;
 }
